# docmend

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .prettierignore  .prettierrc.json  .project-standards.yml  AGENTS.md  ALIGNMENT_HANDOFF.md  CHANGELOG.md  CLAUDE.md  README.md  STATUS.md  TODO.md  conftest.py  pyproject.toml
.agents/agent-handoff/: manifest.json
.claude/: settings.json
.codex/: config.toml
.github/: dependabot.yml
.github/workflows/: check.yml  dependency-review.yml  format.yml  lint-markdown.yml  release.yml  scale-qualification.yml  traceability.yml  validate-specs.yml
.standards/: catalog.toml  config.toml  lock.toml
docs/: STATUS.md  TODO.md  deep-research-queue.md  dependency-licenses.md  gap-analysis.md  handoff.doc  handoff.md  open-questions.md  prompt-consistency-workflow.md  prompt-gap-analysis-workflow.md  prompt.md  repo-hygiene.md  resolved-questions.md
docs/adr/: README.md  adr-0001-no-markdown-frontmatter-standard.md  adr-0002-layered-pipeline-isolated-writer.md  adr-0003-in-place-mutation-output-model.md  adr-0004-apply-safety-gate-and-preservation.md  adr-0005-durable-artifact-schema-contract.md  adr-0006-resume-and-recovery-model.md  adr-0007-concurrency-primitive-process-pool.md  adr-0008-stable-document-identity.md  adr-0009-encoding-detection-dual-skip-gate.md  adr-0010-pluggable-policy-seams.md  adr-0011-frontmatter-optional-minimal-split.md  adr-0012-verify-semantics-exit-code-taxonomy.md  adr-0013-v1-dependency-selection.md  adr-0014-tool-first-product-scope.md  adr-0015-test-corpus-and-anonymization.md  adr-0016-mechanical-transform-boundary.md  adr-0017-branch-and-ci-cd-workflow.md  adr-0018-doc-processing-repository-boundary.md  adr-0019-manifest-2-recovery-model.md  adr-0020-commit-boundary-object-identity.md  adr-0021-artifact-destination-guard.md  adr-0022-sequential-million-file-scale-contract.md  adr-backlog.md  adr.template.md  index.md
docs/codex-reviews/: 2026-07-06-232426-codex-plan-review-round1.md  2026-07-06-233748-codex-plan-review-round2.md  2026-07-06-234425-codex-plan-review-round3.md  2026-07-06-235057-codex-plan-review-round4.md  2026-07-10-2034-ai-and-prompt-workflow-review-execution.json  2026-07-10-2034-ai-and-prompt-workflow-review-report.md  2026-07-10-2034-all-review-findings.md  2026-07-10-2034-api-contract-review-execution.json  2026-07-10-2034-api-contract-review-report.md  2026-07-10-2034-architecture-boundary-review-execution.json  2026-07-10-2034-architecture-boundary-review-report.md  2026-07-10-2034-background-jobs-and-async-workflow-review-execution.json  2026-07-10-2034-background-jobs-and-async-workflow-review-report.md  2026-07-10-2034-ci-cd-review-execution.json  2026-07-10-2034-ci-cd-review-report.md  2026-07-10-2034-codex-review-live-status.md  2026-07-10-2034-codex-review-plan.md  2026-07-10-2034-codex-review-shared-research.md  2026-07-10-2034-codex-review-sweep.json  2026-07-10-2034-codex-review-sweep.md  2026-07-10-2034-comprehensive-code-review-execution.json  2026-07-10-2034-comprehensive-code-review-report.md  2026-07-10-2034-comprehensive-review-synthesis.md  2026-07-10-2034-conventions-review-execution.json  2026-07-10-2034-conventions-review-report.md  2026-07-10-2034-data-schema-migration-review-execution.json  2026-07-10-2034-data-schema-migration-review-report.md  2026-07-10-2034-dependency-supply-chain-review-execution.json  2026-07-10-2034-dependency-supply-chain-review-report.md  2026-07-10-2034-documentation-and-runbook-review-execution.json  2026-07-10-2034-documentation-and-runbook-review-report.md  2026-07-10-2034-frontend-state-and-interaction-review-execution.json  2026-07-10-2034-frontend-state-and-interaction-review-report.md  2026-07-10-2034-incident-readiness-review-execution.json  2026-07-10-2034-incident-readiness-review-report.md  2026-07-10-2034-integration-and-third-party-boundary-review-execution.json  2026-07-10-2034-integration-and-third-party-boundary-review-report.md  2026-07-10-2034-observability-review-execution.json  2026-07-10-2034-observability-review-report.md  2026-07-10-2034-performance-review-execution.json  (+13 more)
docs/decisions/: adr-0001-no-markdown-frontmatter-standard.md
docs/fable-review/: 2026-07-19-docmend-review.md
docs/handoff/: architecture.md  conventions.md  credentials.md  deployed.md  specs-plans.md  state.md
docs/prompts/: prompt-consistency-workflow.md  prompt-gap-analysis-workflow.md
docs/research/: append-safe-manifest-format.md  architecture-and-traceability-enforcement.md  atomic-write-filesystem-semantics.md  backup-integrity-verification.md  batch-curation-review-workflow.md  batch-throughput-and-capacity.md  charset-detection-floors-for-legacy-text-ingestion.md  combinatorial-safety-gate-testing.md  docmend-and-the-free-threaded-cpython-switch-decision.md  docmend-backup-medium-durability-and-throughput-research.md  docmend-deferred-review-artifacts-for-confidential-corpora.md  encoding-detection-benchmark.md  index.md  json-schema-validator-library.md  json-schema-versioning-migration.md  license-compliance-tooling.md  (+15 more)
scripts/: check.py  check_traceability.py  fix_spec_toc.py  gen_weird_corpus.py  measure_scale_stage.py  qualify_scale.py
tests/: conftest.py  corpus.py  test_apply.py  test_artifact_containment.py  test_artifact_guard.py  test_check_traceability.py  test_cli.py  test_cli_apply.py  test_cli_plan.py  test_cli_resume.py  test_cli_scan.py  test_cli_verify.py  test_config.py  test_detection.py  test_detection_provenance.py  test_discovery.py  test_encoding_floor.py  test_frontmatter.py  test_gate.py  test_idempotency.py  test_import_contracts.py  test_inventory_artifact.py  test_lineage_imports.py  test_lock.py  test_manifest_chain.py  test_observability.py  test_plan_artifact.py  test_planning.py  test_report_artifact.py  test_restore.py  test_restore_drill.py  test_resume.py  test_scale.py  test_scale_build.py  test_scale_corpus.py  test_scale_evidence.py  test_scale_file_size.py  test_scale_qualification.py  test_scale_reconcile.py  test_scale_resources.py  (+8 more)
(+187 files in other folders)
