[project]
name = "docmend"
version = "0.1.0"
description = "Normalize, repair, and convert large libraries of legacy .txt/.html documents into clean, well-structured Markdown."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Chris Purcell" }]
keywords = ["markdown", "pandoc", "text-normalization", "document-conversion", "cli"]
dependencies = []

# NOTE: no [project.scripts] entry point yet — docmend is pre-implementation
# (src/docmend/ currently holds only a version smoke-test surface). Add the
# console script (e.g. docmend = "docmend.cli:main") when the CLI module lands.

[dependency-groups]
# pytest floor matches [tool.pytest.ini_options].minversion; ruff>=0.14 is the first
# release with non-preview py314 target-version support (0.9-0.11 reject "py314").
# pytest-cov is intentionally absent: the gate measures coverage with coverage.py
# directly, and a second coverage entry point creates competing instructions.
dev = [
    "basedpyright",
    "coverage[toml]",
    "pip-audit",
    "pytest>=9.0",
    "ruff>=0.14",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]
# Directories owned by external programs are never linted/formatted by this standard.
extend-exclude = [".claude", ".agents", ".codex", ".continue"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PIE", "PTH", "RET", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.basedpyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.14"
pythonPlatform = "All"
failOnWarnings = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
