[project]
name = "docmend"
version = "2.0.0"
description = "Normalize, repair, and convert large libraries of legacy .txt/.html documents into clean, well-structured Markdown."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Chris Purcell" }]
keywords = ["markdown", "pandoc", "text-normalization", "document-conversion", "cli"]
dependencies = [
    "charset-normalizer>=3.4.2",
    "jsonschema[format-nongpl]>=4.26",
    "pathspec>=1.1.1",
    "pydantic>=2.12",
    "rich>=15.0.0",
    "ruamel-yaml>=0.18",
    "structlog>=26.1.0",
    "typer>=0.26.8",
]

[project.scripts]
# Typer app objects are callable; this is the whole console entry point (IR-005).
docmend = "docmend.cli:app"

[dependency-groups]
# pytest floor matches [tool.pytest.ini_options].minversion; ruff>=0.14 is the first
# release with non-preview py314 target-version support (0.9-0.11 reject "py314").
# pytest-cov is intentionally absent: the gate measures coverage with coverage.py
# directly, and a second coverage entry point creates competing instructions.
dev = [
    "allpairspy>=2.5.1",
    "basedpyright",
    "coverage[toml]",
    "faker>=40.28.1",
    "hypothesis>=6.156.1",
    "import-linter>=2.13",
    "pip-audit",
    "pyfakefs>=6.2.0",
    "pytest>=9.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14",
]

[build-system]
requires = ["uv_build==0.11.28"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]
# Directories owned by external programs are never linted/formatted by this standard.
extend-exclude = [".claude", ".agents", ".codex", ".continue"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PIE", "PTH", "RET", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.basedpyright]
include = ["src", "tests"]
# "." so `tests.helpers.*` (the shared fixture builders) resolves as a
# namespace package, matching pytest's pythonpath below. "src" must then be
# listed explicitly: any extraPaths value disables pyright's automatic ./src
# search path, and without it `docmend` resolves to the INSTALLED py.typed
# copy — whose strict re-export rules flag every transitive import.
extraPaths = [".", "src"]
typeCheckingMode = "strict"
pythonVersion = "3.14"
pythonPlatform = "All"
failOnWarnings = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
# Repo root on sys.path so shared fixture builders import as tests.helpers.*
# (plain importable helpers, not conftest fixtures — they build the adversarial
# raw manifest documents the strict models would refuse to construct).
pythonpath = ["."]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "slow: opt-in long-running tests (NFR-001 scale run; also gated on DOCMEND_SCALE=1)",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

# --- import-linter (repo-owned, additive; NOT part of the python-tooling standard) ---
# NFR-005 purity contract (spec OQ-033 / adr-0002): the transform layer is pure —
# text in, text out. CI enforcement runs via tests/test_import_contracts.py inside
# the existing pytest gate, so the standard-owned check workflow needs no edit
# (conventions #8). The runtime half of the enforcement is the autouse fixture in
# tests/unit/transform/conftest.py.
[tool.importlinter]
root_package = "docmend"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "NFR-005: transform layer is pure (no filesystem modules, never the writer)"
type = "forbidden"
source_modules = ["docmend.transform"]
forbidden_modules = [
    "docmend.writer",
    "os",
    "io",
    "pathlib",
    "shutil",
    "tempfile",
]
