[project]
name = "docmend"
version = "2.0.1"
description = "Normalize, repair, and convert large libraries of legacy .txt/.html documents into clean, well-structured Markdown."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Chris Purcell" }]
keywords = ["markdown", "pandoc", "text-normalization", "document-conversion", "cli"]
dependencies = [
    "charset-normalizer>=3.4.2",
    "jsonschema[format-nongpl]>=4.26",
    "pathspec>=1.1.1",
    "pydantic>=2.12",
    "rich>=15.0.0",
    "ruamel-yaml>=0.18",
    "structlog>=26.1.0",
    "typer>=0.26.8",
]

[project.scripts]
# Typer app objects are callable; this is the whole console entry point (IR-005).
docmend = "docmend.cli:app"

# NOTE (V5 migration): [dependency-groups], [build-system], [tool.basedpyright],
# and [tool.pytest.ini_options] are rendered by the python-tooling standard's
# control plane. docmend's dev deps beyond the canonical set are declared as
# additional_dev_dependencies in .standards/config.toml; the repo-root conftest.py
# replaces the former [tool.pytest.ini_options].pythonpath.

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]
# Directories owned by external programs are never linted/formatted by this standard.
extend-exclude = [".claude", ".agents", ".codex", ".continue"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PIE", "PTH", "RET", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

# --- import-linter (repo-owned, additive; NOT part of the python-tooling standard) ---
# NFR-005 purity contract (spec OQ-033 / adr-0002): the transform layer is pure —
# text in, text out. CI enforcement runs via tests/test_import_contracts.py inside
# the existing pytest gate, so the standard-owned check workflow needs no edit
# (conventions #8). The runtime half of the enforcement is the autouse fixture in
# tests/unit/transform/conftest.py.
[tool.importlinter]
root_package = "docmend"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "NFR-005: transform layer is pure (no filesystem modules, never the writer)"
type = "forbidden"
source_modules = ["docmend.transform"]
forbidden_modules = [
    "docmend.writer",
    "os",
    "io",
    "pathlib",
    "shutil",
    "tempfile",
]

[dependency-groups]
dev = [
    "basedpyright",
    "coverage[toml]",
    "pip-audit",
    "pytest>=9.0",
    "ruff>=0.14.11",
    "allpairspy>=2.5.1",
    "faker==40.28.1",
    "hypothesis>=6.156.1",
    "import-linter>=2.13",
    "pyfakefs>=6.2.0",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.basedpyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.14"
pythonPlatform = "All"
failOnWarnings = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
